--- a/config.toml
+++ b/config.toml
@@ -184,11 +184,20 @@ disableHugoGeneratorInject = false
     identifier = "about"
     name       = "About"
     url        = "about/"
+    weight = 10
+
+    [[menu.main]]
+    identifier = "minutes"
+    name       = "Minutes"
+    url        = "minutes/"
+    weight = 20
 
     [[menu.main]]
     identifier = "contact"
     name       = "Contact"
     url        = "contact/"
+    weight = 30
+
   # [[menu.main]]
   #   identifier = "posts"
   #   name       = "Posts"
